[gd_scene load_steps=25 format=3 uid="uid://dsdtpug2sa4g0"]

[ext_resource type="Script" uid="uid://bx8m8lkkpx4xl" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://cfho5mbhojlvc" path="res://scripts/player_animation_controller.gd" id="2_g2els"]

[sub_resource type="Gradient" id="Gradient_g2els"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qhqgy"]
gradient = SubResource("Gradient_g2els")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2els"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, 0, 0)
gravity = Vector3(0, 2, 0)
color_ramp = SubResource("GradientTexture1D_qhqgy")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g2els"]
load_path = "res://.godot/imported/main-render.png-2d416fcab2624e698267270507e17ade.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = SubResource("CompressedTexture2D_g2els")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4r5pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02re4"]
size = Vector2(18, 21)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_g2els")
base_strength = 400.0
attack_recoil_str_mult = 1.3
normal_attack_bounce_str_mult = 1.4
parry_bounce_str_mult = 1.8
getting_hit_bounce_str_mult = 2.0
slide_down_max_speed = 70.0
mov_speed = 200.0
parry_raycast_distance = 40.0
extra_speed_decay = 0.3

[node name="AnimationController" type="Node2D" parent="."]
script = ExtResource("2_g2els")

[node name="SpeedParticles" type="GPUParticles2D" parent="."]
amount = 32
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_4r5pv")
animation = &"idle"
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"output_section": false,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "res://sprites",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "/home/alex/Pictures/sprites/main-render.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "268efa06e7c44aad924b352977558dd3"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_02re4")

[node name="Raycasts" type="Node2D" parent="."]

[node name="BodyDownCast1" type="RayCast2D" parent="Raycasts"]
position = Vector2(-8, 0)
target_position = Vector2(0, 35)
collision_mask = 12

[node name="BodyDownCast2" type="RayCast2D" parent="Raycasts"]
position = Vector2(8, 0)
target_position = Vector2(0, 35)
collision_mask = 12

[node name="BodyForwardCast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(20, 0)
